# referee

./: .gitignore  LICENSE  Makefile  README.MD  pyproject.toml  requirements.txt
config/: config.yaml
src/: basics.py  bubble.py  config.py  database.py  db.py  main.py  manager.py
src/exchanges/: base.py  binance.py  bybit.py  coinbase.py
src/exchanges/mexc/: mexc.py
src/exchanges/mexc/proto/: PublicBookTickerBatchV3Api_pb2.pyi  PublicIncreaseDepthsBatchV3Api_pb2.pyi  PublicMiniTickersV3Api_pb2.pyi  PushDataV3ApiWrapper_pb2.pyi
src/interests/: bubble.py  bubbles.py  coingecko.py
src/stocks/: binance.py  bybit.py  coinbase.py
tests/: test_config.py  test_database.py  test_db.py  test_manager_loop.py
