[project]
name = "referee"
version = "0.1.0"
description = "Crypto arbitrage monitoring service"
authors = [{name="Denys Makovskyi"}]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.dependencies]
aiohttp = "*"
websockets = "*"
PyYAML = "*"
SQLAlchemy = "*"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.package-data]
"" = ["config/*.yaml"]
